tests/errors/lex_error.wren
// Test if-else and while statements
import "ifj25" for Ifj

class Program {
    static main() {
        var _sasa
    }
}
